// This file is part of KWIVER, and is distributed under the
// OSI-approved BSD 3-Clause License. See top-level LICENSE file or
// https://github.com/Kitware/kwiver/blob/master/LICENSE for details.

syntax = "proto2";

import "track_state.proto";
import "detected_object.proto";
import "point.proto";

package kwiver.protobuf;

message object_track_state {
  required track_state track_state = 1;
  required int64 time = 2;
  optional detected_object detection = 3;
  required point_d image_point = 4;  // 2d point
  required point_d track_point = 5;   // 3d point
}
